# epicac

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  ipcack.c  ipcack.h
cli/: main.c
lib/: epicac.c  epicac.h
test/: bench.c  test.c
